--- a/HTML/index.html
+++ b/HTML/index.html
@@ -54,6 +54,6 @@
     
     <!--Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-    <script src="../JavaScript/index2.js"></script>
+    <script src="../JavaScript/index.js"></script>
 </body>
 </html>
